--- a/app/Resources/views/place/new.html.twig
+++ b/app/Resources/views/place/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Place creation</h1>
 
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_widget(form) }}
         <input type="submit" value="Create" />
     {{ form_end(form) }}
