fixing request not working on https

--- a/app/Resources/views/view/list.html.twig
+++ b/app/Resources/views/view/list.html.twig
@@ -6,7 +6,7 @@
 $(document).ready(function(){
     $.ajax({
     		type: "GET",
-        url: "/rest_place",
+        url: "/rest_place/",
         dataType: "json",
         // ajax options
         success: function(response) {
