--- a/app/Resources/views/view/new.html.twig
+++ b/app/Resources/views/view/new.html.twig
@@ -3,48 +3,45 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-$(document).ready(function() {
 
-    // process the form
-    $('form').submit(function(event) {
+$(document).ready(function(){
+    $("form").on("submit", function(event){
+        
+ 
+        var formValues= getFormData($(this));
+        console.log(formValues);
 
-        // get the form data
-        // there are many ways to get this data using jQuery (you can use the class or id also)
-        var formData = {
-            'name'              : $('input[name=name]').val(),
-            'address'             : $('input[name=address]').val(),
-            'comment'    : $('input[name=comment]').val()
-        };
-
-        // process the form
         $.ajax({
             type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
             url         : "/rest_place/new", // the url where we want to POST
-            data        : data, // our data object
+            contentType: "application/json",
+            data        : JSON.stringify(formValues), // our data object
             dataType    : 'json', // what type of data do we expect back from the server
-                        encode          : true
         })
             // using the done promise callback
             .done(function(data) {
-
-                // log data to the console so we can see
-                console.log(data);
-
-                // here we will handle errors and validation messages
-            });
-
-        // stop the form from submitting the normal way and refreshing the page
+                alert("done")
+        });
         event.preventDefault();
     });
-
 });
 
+function getFormData($form){
+    var unindexed_array = $form.serializeArray();
+    var indexed_array = {};
+
+    $.map(unindexed_array, function(n, i){
+        indexed_array[n['name']] = n['value'];
+    });
+
+    return indexed_array;
+}
 </script>
 </head>
 <body>
 <h1>Place creation</h1>
 
-<form action="/rest_place/new" method="POST">
+<form id="form">
 
         <!-- NAME -->
         <div id="name-group" class="form-group">
@@ -63,7 +60,7 @@ $(document).ready(function() {
         <!-- COMMENT ALIAS -->
         <div id="comment-group" class="form-group">
             <label for="comment">Comment</label>
-            <input type="text" class="form-control" name="comment" placeholder="enter a cooment">
+            <input type="text" class="form-control" name="comment" placeholder="enter a comment">
             <!-- errors will go here -->
         </div>
 
