--- a/app/Resources/views/view/edit.html.twig
+++ b/app/Resources/views/view/edit.html.twig
@@ -9,7 +9,7 @@ $(document).ready(function(){
     var id = window.location.pathname.match(/view\/(\d+)/)[1]
     $.ajax({
             type: "GET",
-            url: '/rest_place/'+id+'/edit',
+            url: '/rest_place/'+id,
             dataType: "json",
             // ajax options
             success: function(response) {
@@ -24,7 +24,7 @@ $(document).ready(function(){
         var formValues= getFormData($(this));
 
         $.ajax({
-            type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
+            type        : 'PATCH', // define the type of HTTP verb we want to use (POST for our form)
             url         : '/rest_place/'+id+'/edit', // the url where we want to POST
             contentType: "application/json",
             data        : JSON.stringify(formValues), // our data object
@@ -85,7 +85,7 @@ function getFormData($form){
         </div>
        
 
-        <button type="submit" class="btn btn-success">Submit <span class="fa fa-arrow-right"></span></button>
+        <button type="submit" >Submit </button>
 
 </form>
 <div>
