--- a/app/Resources/views/view/contacts.html.twig
+++ b/app/Resources/views/view/contacts.html.twig
@@ -10,7 +10,6 @@ $(document).ready(function(){
     		type: "GET",
             url:'/place/'+id+'/contacts',
             dataType: "json",
-            // ajax options
             success: function(response) {
                 append_json(response);
             }
@@ -42,12 +41,10 @@ function deleteContact(id){
             type        : 'DELETE', 
             url         : '/place/contact/'+id, 
             contentType: "application/json",
-            data        : JSON.stringify({}), // our data object
-            dataType    : 'json', // what type of data do we expect back from the server
+            data        : JSON.stringify({}),
+            dataType    : 'json',
         })
-            // using the done promise callback
             .done(function(data) {
-                alert("done")
                 document.location.reload();
         });
 }
