--- a/app/Resources/views/view/edit.html.twig
+++ b/app/Resources/views/view/edit.html.twig
@@ -11,7 +11,7 @@ $(document).ready(function(){
             type: "GET",
             url: '/rest_place/'+id,
             dataType: "json",
-            // ajax options
+
             success: function(response) {
                 generateForm(response);
             }
@@ -24,15 +24,15 @@ $(document).ready(function(){
         var formValues= getFormData($(this));
 
         $.ajax({
-            type        : 'PATCH', // define the type of HTTP verb we want to use (POST for our form)
-            url         : '/rest_place/'+id+'/edit', // the url where we want to POST
+            type        : 'PATCH', 
+            url         : '/rest_place/'+id+'/edit',
             contentType: "application/json",
-            data        : JSON.stringify(formValues), // our data object
-            dataType    : 'json', // what type of data do we expect back from the server
+            data        : JSON.stringify(formValues), 
+            dataType    : 'json', 
         })
-            // using the done promise callback
+            
             .done(function(data) {
-                alert("done")
+                location.href='/view/';
         });
         event.preventDefault();
     });
@@ -63,25 +63,24 @@ function getFormData($form){
 <h1>Place creation</h1>
 
 <form id="form">
-     <!-- NAME -->
+ 
         <div id="name-group" class="form-group">
             <label for="name">Name</label>
             <input id="input_name" type="text" class="form-control" required="required" name="name" value="enter the name">
-            <!-- errors will go here -->
+          
         </div>
 
-        <!-- ADDRESS -->
         <div id="address-group" class="form-group">
             <label for="address">Address</label>
             <input id="input_address" type="text" class="form-control" required="required" name="address" value="enter the address">
-            <!-- errors will go here -->
+     
         </div>
 
-        <!-- COMMENT ALIAS -->
+ 
         <div id="comment-group" class="form-group">
             <label for="comment">Comment</label>
             <input id="input_comment"type="text" class="form-control" name="comment" value="enter a comment">
-            <!-- errors will go here -->
+      
         </div>
        
 
