--- a/app/Resources/views/view/new.html.twig
+++ b/app/Resources/views/view/new.html.twig
@@ -9,18 +9,17 @@ $(document).ready(function(){
         
  
         var formValues= getFormData($(this));
-        console.log(formValues);
 
         $.ajax({
-            type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
-            url         : "/rest_place/new", // the url where we want to POST
+            type        : 'POST', 
+            url         : "/rest_place/new", 
             contentType: "application/json",
-            data        : JSON.stringify(formValues), // our data object
-            dataType    : 'json', // what type of data do we expect back from the server
+            data        : JSON.stringify(formValues),
+            dataType    : 'json', 
         })
-            // using the done promise callback
+            
             .done(function(data) {
-                alert("done")
+                location.href='/view/';
         });
         event.preventDefault();
     });
@@ -43,25 +42,25 @@ function getFormData($form){
 
 <form id="form">
 
-        <!-- NAME -->
+
         <div id="name-group" class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" required="required" name="name" placeholder="enter the name">
-            <!-- errors will go here -->
+ 
         </div>
 
-        <!-- ADDRESS -->
+
         <div id="address-group" class="form-group">
             <label for="address">Address</label>
             <input type="text" class="form-control" required="required" name="address" placeholder="enter the address">
-            <!-- errors will go here -->
+
         </div>
 
-        <!-- COMMENT ALIAS -->
+
         <div id="comment-group" class="form-group">
             <label for="comment">Comment</label>
             <input type="text" class="form-control" name="comment" placeholder="enter a comment">
-            <!-- errors will go here -->
+
         </div>
 
         <button type="submit" class="btn btn-success">Submit <span class="fa fa-arrow-right"></span></button>
